--- a/package.json
+++ b/package.json
@@ -9,20 +9,29 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "axios": "^1.5.0",
     "expo": "^49.0.3",
     "expo-constants": "~14.4.2",
+    "expo-font": "^11.4.0",
+    "expo-linear-gradient": "~12.3.0",
     "expo-linking": "~5.0.2",
     "expo-router": "2.0.0",
     "expo-splash-screen": "~0.20.4",
     "expo-status-bar": "~1.6.0",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.3",
+    "react-native": "0.72.4",
+    "react-native-dotenv": "^3.4.9",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-heroicons": "^3.2.0",
     "react-native-reanimated": "~3.3.0",
+    "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-web": "~0.19.6"
+    "react-native-svg": "^13.13.0",
+    "react-native-web": "~0.19.6",
+    "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
